--- a/src/index.css
+++ b/src/index.css
@@ -1,15 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;500;600;700&display=swap");
 
 @import "tailwindcss";
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
-
-@theme {
-  --font-roboto: "Inter", sans-serif;
-  --font-Oswald : : 'Inter', sans-serif;
-
-}
 
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
@@ -50,7 +44,6 @@
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-ring: var(--sidebar-ring);
-
 }
 
 :root {
@@ -86,7 +79,6 @@
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
-
 }
 
 .dark {
@@ -121,55 +113,68 @@
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.556 0 0);
-
 }
 
 @layer base {
   * {
     @apply border-border outline-ring/50;
-    
-
   }
-   :root {
+  :root {
     --font-body: Inter, system-ui, sans-serif;
-    --font-title: 'Bebas Neue', system-ui, sans-serif;
+    --font-title: "Bebas Neue", system-ui, sans-serif;
   }
   body {
     @apply bg-background text-foreground;
-        font-family: var(--font-body);
-
+    font-family: var(--font-body);
   }
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     font-family: var(--font-title);
     letter-spacing: 0.08em;
   }
-
 }
 @keyframes marquee {
-  0%   { transform: translateY(100%); }
-  100% { transform: translateY(-100%); }
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
 }
 
 .animate-marquee {
   display: inline-block;
   animation: marquee 10s linear infinite;
 }
-::-webkit-scrollbar {
-    width: 10px;
+/* Only applies to episode list */
+.episode-scroll::-webkit-scrollbar {
+  width: 8px;
 }
 
-::-webkit-scrollbar-track {
-    background:#747579;
-    border-radius: 5px;
+.episode-scroll::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.05);
+  border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb {
-    background: #282829b0;
-    border-radius: 5px;
+.episode-scroll::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.18);
+  border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-    background: #282829b0;
+.episode-scroll::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.28);
+}
+.episode-scroll {
+  scrollbar-gutter: stable;
+}
+
+.episode-scroll {
+  scrollbar-width: thin;
+  scrollbar-color: rgba(255, 255, 255, 0.2) transparent;
 }
 
 .bg-slate-pattern {
